# haskell-class

week2/: LICENSE  week2.cabal
week2/app/: Main.hs
week2/sample_data/: make_sample_data
week2/src/: Lib.hs  ParseFile.hs
