name:                week2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rebeccaskinner/week2#readme
license:             BSD3
license-file:        LICENSE
author:              Rebecca Skinner
maintainer:          rebecca.skinner@ctl.io
copyright:           Copyright (C) 2015 Century Link
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, ParseFile
  build-depends:       base >= 4.7 && < 5
                     , HTTP >= 4000.0.0
                     , xml >= 1.3.0
                     , split >= 0.2.2
  default-language:    Haskell2010

executable week2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , week2
                     , HTTP >= 4000.0.0
                     , xml >= 1.3.0
  default-language:    Haskell2010

test-suite week2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , week2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rebeccaskinner/week2
